--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
     "private": true,
     "dependencies": {
         "node-sass": "^4.11.0",
+        "popper.js": "^1.14.7",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
-        "react-scripts": "2.1.5"
+        "react-scripts": "2.1.5",
+        "tippy.js": "^4.0.3",
+        "tooltip.js": "^1.3.1"
     },
     "scripts": {
         "start": "react-scripts start",
